--- a/css/index.scss
+++ b/css/index.scss
@@ -92,7 +92,7 @@ main#index {
         }
       }
       div.arrow {
-        // display: none;
+        display: none;
         cursor: pointer;
         position: absolute;
         height: 160px;
